--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,23 +6,27 @@
         xmlns:local="clr-namespace:Desinfection"
         mc:Ignorable="d"
         Title="Désinfection" Height="688" Width="1041" ResizeMode="CanMinimize" Icon="c:\_tech\Applications\source\images\Icone.ico" WindowStartupLocation="CenterScreen">
-    <Grid>
+        <Window.Resources>
+            <ResourceDictionary Source="c:\_Tech\Applications\source\Resources.xaml"/>
+        </Window.Resources>
+
+    <Grid x:Name="GridDesinfection">
         <Grid.Background>
             <ImageBrush ImageSource="c:\_tech\Applications\desinfection\source\Background_desinfection.jpeg"/>
         </Grid.Background>
-        <Button x:Name="btnProcess_Explorer" Content="Process_Explorer" HorizontalAlignment="Left" Margin="670,300,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="Black" Background="LightGray" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnRKill" Content="RKill" HorizontalAlignment="Left" Margin="670,200,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="Black" Background="red" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnAutoruns" Content="Autoruns" HorizontalAlignment="Left" Margin="200,200,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="Black" Background="LightGray" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnHDD" Content="Nettoyage HDD" HorizontalAlignment="Left" Margin="200,400,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="Black" Background="darkcyan" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnCcleaner" Content="Ccleaner" HorizontalAlignment="Left" Margin="200,300,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="darkgreen" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnRevo" Content="Revo" HorizontalAlignment="Left" Margin="670,400,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="cyan" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnADWcleaner" Content="ADWcleaner" HorizontalAlignment="Left" Margin="460,100,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="Yellow" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnMalwareByte" Content="MalwareByte" HorizontalAlignment="Left" Margin="460,200,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="magenta" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnSuperAntiSpyware" Content="SuperAntiSpyware" HorizontalAlignment="Left" Margin="460,300,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="cyan" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnHitmanPro" Content="HitmanPro" HorizontalAlignment="Left" Margin="460,400,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="darkcyan" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnRogueKiller" Content="RogueKiller" HorizontalAlignment="Left" Margin="460,500,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="darkgreen" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnQuit" Content="Quitter" HorizontalAlignment="Left" Margin="460,575,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="darkred" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Button x:Name="btnMenu" Content="Menu principal" HorizontalAlignment="Left" Margin="25,35,0,0" VerticalAlignment="Top" Height="55" Width="120" FontFamily="Microsoft Sans Serif" FontSize="12" Foreground="black" Background="darkred" BorderThickness="2,2,2,2" FontWeight="Bold"/>
-        <Label x:Name="label" Width="325" Height="55" FontFamily="Microsoft Sans Serif" FontSize="16" Foreground="White" Background="DarkRed" Content="Choisissez une option" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="358,35,0,0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Button x:Name="btnProcess_Explorer" Content="Process_Explorer" Style="{StaticResource ButtonStyle}" Margin="670,300,0,0" Background="LightGray"/>
+        <Button x:Name="btnRKill" Content="RKill" Style="{StaticResource ButtonStyle}" Margin="670,200,0,0" Background="red"/>
+        <Button x:Name="btnAutoruns" Content="Autoruns" Style="{StaticResource ButtonStyle}" Margin="200,200,0,0" Background="LightGray"/>
+        <Button x:Name="btnHDD" Content="Nettoyage HDD" Style="{StaticResource ButtonStyle}" Margin="200,400,0,0" Background="darkcyan"/>
+        <Button x:Name="btnCcleaner" Content="Ccleaner" Style="{StaticResource ButtonStyle}" Margin="200,300,0,0" Background="darkgreen"/>
+        <Button x:Name="btnRevo" Content="Revo" Style="{StaticResource ButtonStyle}" Margin="670,400,0,0" Background="cyan"/>
+        <Button x:Name="btnADWcleaner" Content="ADWcleaner" Style="{StaticResource ButtonStyle}" Margin="460,100,0,0" Background="Yellow"/>
+        <Button x:Name="btnMalwareByte" Content="MalwareByte" Style="{StaticResource ButtonStyle}" Margin="460,200,0,0" Background="magenta"/>
+        <Button x:Name="btnSuperAntiSpyware" Content="SuperAntiSpyware" Style="{StaticResource ButtonStyle}" Margin="460,300,0,0" Background="cyan"/>
+        <Button x:Name="btnHitmanPro" Content="HitmanPro" Style="{StaticResource ButtonStyle}" Margin="460,400,0,0" Background="darkcyan"/>
+        <Button x:Name="btnRogueKiller" Content="RogueKiller" Style="{StaticResource ButtonStyle}" Margin="460,500,0,0" Background="darkgreen"/>
+        <Button x:Name="btnQuit" Content="Quitter" Style="{StaticResource ButtonStyle}" Margin="460,575,0,0" Background="darkred"/>
+        <Button x:Name="btnMenu" Content="Menu principal" Style="{StaticResource ButtonStyle}" Margin="25,35,0,0" Background="darkred"/>
+        <Label x:Name="label" Width="325" Style="{StaticResource LabelStyle}" Background="DarkRed" Content="Choisissez une option" VerticalAlignment="Top" Margin="0,20,0,0"/>
     </Grid>
 </Window>
