--- a/DesinfectionMainWindow.xaml
+++ b/DesinfectionMainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Desinfection.MainWindow"
+﻿<Window x:Name="windowDesinfection" x:Class="Desinfection.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,23 +10,22 @@
             <ResourceDictionary Source="c:\_Tech\Applications\source\Resources.xaml"/>
         </Window.Resources>
 
-    <Grid x:Name="GridDesinfection">
-        <Grid.Background>
-            <ImageBrush ImageSource="c:\_tech\Applications\desinfection\source\Background_desinfection.jpeg"/>
-        </Grid.Background>
-        <Button x:Name="btnProcess_Explorer" Content="Process_Explorer" Style="{StaticResource ButtonStyle}" Margin="670,300,0,0" Background="LightGray"/>
-        <Button x:Name="btnRKill" Content="RKill" Style="{StaticResource ButtonStyle}" Margin="670,200,0,0" Background="red"/>
-        <Button x:Name="btnAutoruns" Content="Autoruns" Style="{StaticResource ButtonStyle}" Margin="200,200,0,0" Background="LightGray"/>
-        <Button x:Name="btnHDD" Content="Nettoyage HDD" Style="{StaticResource ButtonStyle}" Margin="200,400,0,0" Background="darkcyan"/>
-        <Button x:Name="btnCcleaner" Content="Ccleaner" Style="{StaticResource ButtonStyle}" Margin="200,300,0,0" Background="darkgreen"/>
-        <Button x:Name="btnRevo" Content="Revo" Style="{StaticResource ButtonStyle}" Margin="670,400,0,0" Background="cyan"/>
-        <Button x:Name="btnADWcleaner" Content="ADWcleaner" Style="{StaticResource ButtonStyle}" Margin="460,100,0,0" Background="Yellow"/>
-        <Button x:Name="btnMalwareByte" Content="MalwareByte" Style="{StaticResource ButtonStyle}" Margin="460,200,0,0" Background="magenta"/>
-        <Button x:Name="btnSuperAntiSpyware" Content="SuperAntiSpyware" Style="{StaticResource ButtonStyle}" Margin="460,300,0,0" Background="cyan"/>
-        <Button x:Name="btnHitmanPro" Content="HitmanPro" Style="{StaticResource ButtonStyle}" Margin="460,400,0,0" Background="darkcyan"/>
-        <Button x:Name="btnRogueKiller" Content="RogueKiller" Style="{StaticResource ButtonStyle}" Margin="460,500,0,0" Background="darkgreen"/>
-        <Button x:Name="btnQuit" Content="Quitter" Style="{StaticResource ButtonStyle}" Margin="460,575,0,0" Background="darkred"/>
-        <Button x:Name="btnMenu" Content="Menu principal" Style="{StaticResource ButtonStyle}" Margin="25,35,0,0" Background="darkred"/>
-        <Label x:Name="label" Width="325" Style="{StaticResource LabelStyle}" Background="DarkRed" Content="Choisissez une option" VerticalAlignment="Top" Margin="0,20,0,0"/>
+    <Grid x:Name="gridDesinfection">
+        <Image x:Name="imgBackGround_Desinfection" Source="c:\_tech\Applications\desinfection\source\Background_desinfection.jpeg" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stretch="UniformToFill"/>
+        <Rectangle x:Name="rectBackGround" Fill="#4D000000"/>
+       <Button x:Name="btnProcess_Explorer_Desinfection" Content="Process_Explorer" Style="{StaticResource ButtonStyle}" Margin="670,300,0,0" Background="LightGray"/>
+        <Button x:Name="btnRKill_Desinfection" Content="RKill" Style="{StaticResource ButtonStyle}" Margin="670,200,0,0" Background="red"/>
+        <Button x:Name="btnAutoruns_Desinfection" Content="Autoruns" Style="{StaticResource ButtonStyle}" Margin="200,200,0,0" Background="LightGray"/>
+        <Button x:Name="btnHDD_Desinfection" Content="Nettoyage HDD" Style="{StaticResource ButtonStyle}" Margin="200,400,0,0" Background="darkcyan"/>
+        <Button x:Name="btnCcleaner_Desinfection" Content="Ccleaner" Style="{StaticResource ButtonStyle}" Margin="200,300,0,0" Background="darkgreen"/>
+        <Button x:Name="btnRevo_Desinfection" Content="Revo" Style="{StaticResource ButtonStyle}" Margin="670,400,0,0" Background="cyan"/>
+        <Button x:Name="btnADWcleaner_Desinfection" Content="ADWcleaner" Style="{StaticResource ButtonStyle}" Margin="460,100,0,0" Background="Yellow"/>
+        <Button x:Name="btnMalwareByte_Desinfection" Content="MalwareByte" Style="{StaticResource ButtonStyle}" Margin="460,200,0,0" Background="magenta"/>
+        <Button x:Name="btnSuperAntiSpyware_Desinfection" Content="SuperAntiSpyware" Style="{StaticResource ButtonStyle}" Margin="460,300,0,0" Background="cyan"/>
+        <Button x:Name="btnHitmanPro_Desinfection" Content="HitmanPro" Style="{StaticResource ButtonStyle}" Margin="460,400,0,0" Background="darkcyan"/>
+        <Button x:Name="btnRogueKiller_Desinfection" Content="RogueKiller" Style="{StaticResource ButtonStyle}" Margin="460,500,0,0" Background="darkgreen"/>
+        <Button x:Name="btnQuit_Desinfection" Content="Quitter" Style="{StaticResource ButtonStyle}" Margin="460,575,0,0" Background="darkred"/>
+        <Button x:Name="btnMenu_Desinfection" Content="Menu principal" Style="{StaticResource ButtonStyle}" Margin="25,35,0,0" Background="darkred"/>
+        <Label x:Name="lblChoisirOption_Desinfection" Width="325" Style="{StaticResource LabelStyle}" Background="DarkRed" Content="Choisissez une option" VerticalAlignment="Top" Margin="0,20,0,0"/>
     </Grid>
 </Window>
